# a-share-analyst

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  web_app.py
data/: stock_code_map.json
docs/: akshare_api_reference.md
docs/akshare_interfaces/: _summary.json  balance_sheet_report_period.json  cashflow_quarterly.json  cashflow_report_period.json  dividend_history_cninfo.json  dividend_history_sina.json  financial_indicators_em.json  financial_indicators_sina.json  (+25 more)
eval/: clean_reports.py  run_eval.py
output/: 贵州茅台_2025Q4_20260426_170641_collected_data.json  贵州茅台_2025Q4_20260426_171022.md  贵州茅台_2025Q4_20260426_172130_collected_data.json  贵州茅台_2025Q4_20260426_172341_collected_data.json  贵州茅台_2025Q4_20260426_172508.md  贵州茅台_2025Q4_20260426_173116_collected_data.json  贵州茅台_2025Q4_20260426_173204_collected_data.json  贵州茅台_2025Q4_20260426_173304_collected_data.json  贵州茅台_2025Q4_20260426_173316_collected_data.json  贵州茅台_2025Q4_20260426_173328.md  贵州茅台_2025Q4_20260426_173341.md  贵州茅台_2025Q4_20260426_213719_collected_data.json  贵州茅台_2025Q4_20260426_215453_collected_data.json  贵州茅台_2025Q4_20260426_220041_collected_data.json  贵州茅台_2025Q4_20260426_220202.md  贵州茅台_2025Q4_20260426_222540_collected_data.json  贵州茅台_2025Q4_20260426_223022_collected_data.json  贵州茅台_2025Q4_20260426_223126.md
tests/: test_calculator.py  test_data_cache.py  test_graph.py  test_main.py  test_nodes.py  test_search.py  test_state.py  test_stock_code.py  test_structured_data.py  test_subgraph.py  test_web_app.py
web/: app.js  index.html  styles.css
(+287 files in other folders)
